Fixes #3064: unique css shifted for embed_exploration_modal_directive.html

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -2263,17 +2263,7 @@ ul.oppia-dashboard-tiles {
   height: 60vh;
 }
 
-.oppia-embed-modal-code {
-  background-color: #fcfcfc;
-  border: 1px solid #d9d9d9;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 10px;
-}
 
-.oppia-embed-modal-code:hover {
-  background-color: #f9f9f9;
-}
 
 .oppia-version-mismatch-modal .oppia-content {
   max-height: 700px;
